# pixelgame

./: Cargo.toml
src/: main.rs
src/client/: camera.rs  client.rs  elements.rs  input.rs  mod.rs  reactions.rs  run.rs  state.rs  swap_buffer.rs  update.rs  world.rs
src/client/render/: instance.rs  mod.rs  renderer.rs  uniform.rs
src/client/render/tile/: instance.rs  mod.rs  pipeline.rs  shader.wgsl  view.rs
src/util/: mod.rs  point.rs  swap_buf.rs  vector.rs
src/world/: liquid.rs  mod.rs  smoke.rs  water.rs  world.rs
