[package]
name = "pixelgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.14.0", features=["derive"]}
pollster = "0.3"
wgpu = "0.18"
winit = {version="0.28", features=["serde"]}
