[package]
name = "pixelgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.14.0", features=["derive"]}
lazy_static = "1.4.0"
pollster = "0.3"
rand = "0.8.5"
rayon = "1.8.0"
serde = "1.0.193"
vek = "0.16.1"
wgpu = "0.18"
winit = {version="0.28", features=["serde"]}
